use some J21+ features to test the compiler